Fix overflowing of header image
When resizing, the header image was overflowing the header box.
Change flexbox properties of the image and image container.
Add cover and hid overflow.
Impose a min-width of the body to prevent it from shrinking too much.

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
     flex-direction: column;
     justify-content: space-between;
     font-size: 18px;
+    min-width: 130px;
   }
 
   ul {
@@ -23,6 +24,7 @@ body {
     background-color: #1F2937;
     padding: 10px 100px 100px 100px;
     height: 500px;
+    min-width: 500px;
   }
 
 
@@ -55,12 +57,24 @@ body {
     padding: 100px 0;
     display: flex;
     justify-content: space-between;
-    gap: 100px;
+    gap: 50px;
   }
 
-  #header-image {
-    width: 300px;
-    height: 300px;
+  .header-text {
+    flex: 1;
+  }
+
+  .header-image {
+    max-width: 350px;
+    max-height: 350px;
+    
+    overflow: hidden;
+  }
+
+  .header-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 
   .sign-up-button {
